--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scoutingpwa",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
