--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
+    "idb": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
