--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/material": "^5.15.6",
     "idb": "^8.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
