--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@yudiel/react-qr-scanner": "^1.2.6",
     "idb": "^8.0.0",
     "node-gzip": "^1.1.2",
+    "protobufjs": "^7.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12"
