--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
     "@yudiel/react-qr-scanner": "^1.2.6",
+    "csv-stringify": "^6.4.5",
+    "file-saver": "^2.0.5",
     "idb": "^8.0.0",
+    "jszip": "^3.10.1",
     "node-gzip": "^1.1.2",
     "protobufjs": "^7.2.6",
     "react": "^18.2.0",
@@ -22,6 +25,7 @@
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node-gzip": "^1.1.3",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
