--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,9 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "allowUnusedLabels": true,
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
