--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
-    "@mui/x-charts": "^6.19.5",
+    "@mui/x-charts": "^7.0.0-beta.6",
     "@yudiel/react-qr-scanner": "^1.2.6",
     "csv-stringify": "^6.4.5",
     "file-saver": "^2.0.5",
