--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-gzip": "^1.1.2",
     "protobufjs": "^7.2.6",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12"
   },
