--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.6",
     "@mui/x-charts": "^7.0.0-beta.6",
-    "@yudiel/react-qr-scanner": "^1.2.6",
     "csv-stringify": "^6.4.5",
     "file-saver": "^2.0.5",
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
     "node-gzip": "^1.1.2",
     "protobufjs": "^7.2.6",
+    "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
