--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
     "node-gzip": "^1.1.2",
+    "notistack": "^3.0.1",
     "protobufjs": "^7.2.6",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
