--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "protobufjs": "^7.2.6",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.12"
@@ -31,6 +32,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node-gzip": "^1.1.3",
     "@types/react": "^18.2.43",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
