--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-qr-code": "^2.0.12"
   },
   "devDependencies": {
