--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
-    "react-qr-code": "^2.0.12"
+    "react-qr-code": "^2.0.12",
+    "tailwindcss-displaymodes": "^1.0.8"
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.7",
