--- a/package.json
+++ b/package.json
@@ -4,52 +4,56 @@
   "version": "2024.3.1",
   "type": "module",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "dev-host": "vite --host",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.6",
-    "@mui/x-charts": "^7.0.0-beta.6",
-    "csv-stringify": "^6.4.5",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@meshtastic/js": "2.5.5-0",
+    "@mui/material": "^5.16.7",
+    "@mui/x-charts": "^7.20.0",
+    "csv-stringify": "^6.5.1",
     "file-saver": "^2.0.5",
     "idb": "^8.0.0",
     "jszip": "^3.10.1",
     "node-gzip": "^1.1.2",
     "notistack": "^3.0.1",
-    "protobufjs": "^7.2.6",
+    "protobufjs": "^7.4.0",
     "qr-scanner": "^1.4.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
-    "react-qr-code": "^2.0.12",
-    "tailwindcss-displaymodes": "^1.0.8"
+    "react-qr-code": "^2.0.15"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.0",
+    "@eslint/js": "^9.12.0",
     "@types/file-saver": "^2.0.7",
     "@types/node-gzip": "^1.1.3",
-    "@types/react": "^18.2.43",
+    "@types/react": "^18.3.11",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
-    "react-router-dom": "^6.21.3",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.12.0",
+    "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.47",
+    "react-router-dom": "^6.27.0",
+    "tailwindcss": "^3.4.14",
+    "tailwindcss-displaymodes": "^1.0.8",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.9.0",
+    "vite": "^5.4.9",
     "vite-plugin-pwa": "^0.17.5",
-    "workbox-window": "^7.0.0"
+    "workbox-window": "^7.1.0"
   }
 }
