--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chainlynx-scouting",
+  "name": "claw-scoutingpwa",
   "private": true,
   "version": "2024.3.1",
   "type": "module",
